# mdviewer

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_plugin_fixed.bat  create_release.bat  main.cpp  setup_and_build.bat  tc_markdown_lister.cpp  tc_markdown_lister.def  test.md
docs/: convert.md  listplugin.chm  total_commander_lister_plugins.md  webview2_plugin_integration_notes.md
release/: README.md  pluginst.inf  tc_markdown.ini
